# AITripPlannerForDelhiNCR

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pnpm-workspace.yaml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  exceptions.py  main.py  settings.py
backend/app/api/v1/: health.py  itinerary.py  pois.py  route.py  router.py
backend/app/db/: __init__.py  models.py  repository.py  schema.sql  session.py
backend/app/models/: errors.py  health.py  itinerary.py  poi.py  route.py
backend/app/services/: order_optimizer.py  overpass_client.py  poi_normalizer.py  poi_service.py  route_service.py  route_validator.py  routing_client.py
backend/app/services/ai/: __init__.py  ai_planner.py  context_builder.py  groq_client.py  itinerary_validator.py  prompts.py
backend/app/services/planner/: __init__.py  cost.py  filter.py  orchestrator.py  scheduler.py  selector.py
backend/app/utils/: geo.py
backend/scripts/: check_poi_seed.py  ingest_pois.py
backend/scripts/overpass_queries/: food.overpass  history.overpass  nature.overpass  nightlife.overpass
backend/tests/: conftest.py  test_geo.py  test_groq_planner.py  test_health.py  test_ingest.py  test_itinerary_api.py  test_normalizer.py  test_planner_cost.py  test_planner_filter.py  test_planner_scheduler.py  test_planner_selector.py  test_pois_api.py  test_route_api.py  test_route_optimizer.py  test_routing_client.py
backend/tests/fixtures/: overpass_sample.json
(+84 files in other folders)
